--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Ввод данных</title>
 </head>
-
 <body>
     <form id="dataForm">
         На что потратил: <input type="text" id="expense"><br>
@@ -16,9 +14,9 @@
             const expense = document.getElementById('expense').value;
             const amount = document.getElementById('amount').value;
             const data = `${expense},${amount}`;
+            console.log("Отправка данных: ", data);  // Отладка
             Telegram.WebApp.sendData(data);  // Отправка данных обратно боту
         }
     </script>
 </body>
-
 </html>
