--- a/index2.html
+++ b/index2.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ввод данных</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
+
 <body>
-    <form id="dataForm">
-        На что потратил: <input type="text" id="expense"><br>
-        Сумма: <input type="text" id="amount"><br>
-        <button type="button" onclick="sendData()">Сохранить</button>
-    </form>
+    <div style="text-align: center;">
+        <form id="form">
+            <h1>Введите ваши данные</h1>
+            <input type="text" placeholder="На что потрачено" id="aim" pattern="[А-Яа-яЁё\s]*" minlength="2" required>
+            <input placeholder="Сумма" id="cost" required>
+            <div id="error"></div>
+            <button id="accept">Сохранить</button>
+        </form>
+    </div>
     <script>
-        function sendData() {
-            const expense = document.getElementById('expense').value;
-            const amount = document.getElementById('amount').value;
-            const data = `${expense},${amount}`;
-            console.log("Отправка данных: ", data);  // Отладка
-            Telegram.WebApp.sendData(data);  // Отправка данных обратно боту
-        }
+        accept.addEventListener("click", () => {
+            let aim = document.getElementById("aim").value;
+            let cost = document.getElementById("cost").value;
+
+            let data = {
+                aim: aim,
+                cost: cost,
+            }
+
+            tg.sendData(JSON.stringify(data));
+            tg.close();
+        })
     </script>
 </body>
-</html>
